# rtracer

./: Cargo.toml  LICENSE  README.md
src/: Makefile  lib.rs  main.rs  objects.rs  ray.rs  threadpool.rs  utils.rs
src/images/: img.ppm
