[package]
name = "rtracer"
version = "0.1.0"
authors = ["Jonatas <jbmagalhaes28@gmail.com>"]
edition = "2018"
license = "GPLv3"
categories = ["graphics", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
image = "0.23.0"
rand = "0.7.3"
